# linki

./: CMakeLists.txt  LICENSE  README.md
cross/include/: linki.h
native/Linux/include/: socket.enum.h  socket.h
native/Linux/include/cgi/: cgi.h
native/Linux/src/: socket.c
native/Windows/include/: socket.enum.h  socket.h
native/Windows/include/cgi/: cgi.h
native/Windows/src/: socket.c
